<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_add_place"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/menu_add_place" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@android:drawable/btn_star"
            android:title="@string/menu_favorites" />
    </group>

    <item android:title="@string/menu_account">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@android:drawable/ic_menu_myplaces"
                android:title="@string/menu_profile" />
            <item
                android:id="@+id/nav_login"
                android:icon="@android:drawable/ic_menu_manage"
                android:title="@string/menu_login" />
        </menu>
    </item>

</menu>
